--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /_VIDEOS/
+/Assets/_VIDEOS/
+/_output/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
